update tags swagger docs
